<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">تصميم وتحليل الخوارزميات</string>
    <string name="navigation_drawer_open" tools:ignore="MissingTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="MissingTranslation">Close navigation drawer</string>
    <string name="nav_header_title">تصميم وتحليل الخوارزميات</string>
    <string name="nav_header_subtitle" tools:ignore="MissingTranslation">publicmath2014@gmail.com</string>
    <string name="nav_header_desc" tools:ignore="MissingTranslation">Navigation header</string>
    <string name="action_settings">الاعدادات</string>

    <string name="menu_prog">البرامج والبرمجة</string>
    <string name="menu_lang">لغات البرمجة</string>
    <string name="menu_algo">الخوارزميات</string>
    <string name="menu_uml">لغة النمذجة الموحدة</string>
    <string name="menu_linealgo">الخوارزميات الخطية</string>
    <string name="menu_analysis">تحليل الخوارزميات</string>
    <string name="menu_datastract">بنى المعطيات</string>g>
</resources>
