<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_prog"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_prog" />
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_lang" />
        <item
            android:id="@+id/nav_algo"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_algo" />
        <item
            android:id="@+id/nav_uml"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_uml" />
        <item
            android:id="@+id/nav_linealgo"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_linealgo" />
        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_analysis" />
        <item
            android:id="@+id/nav_datastract"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_datastract" />
    </group>


</menu>
